# cut-paperscope-simulation

./: .gitignore  Dockerfile  README.md  develop.py  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: dgm1_hh_2022.vrt  heatmap_styling.qml  landcover_styling.qml  meterological_data.txt
paperscope_simulation/: __main__.py  helper.py  layer.py  paperscope.py  qgis.py  umep.py
